<resources>
    <string name="app_name">Tonuino Audio Manager</string>
    <string name="usb_waiting">Connect a USB drive to browse its files.</string>
    <string
        name="usb_prompt_permission"
    >USB drive detected. Grant access to view files.</string>
    <string name="usb_loading">Loading files\u2026</string>
    <string name="usb_loading_progress">Loading files\u2026 (%1$d/%2$d)</string>
    <string
        name="usb_loading_progress_path"
    >Loading files\u2026 (%1$d/%2$d) - %3$s</string>
    <string name="usb_loading_path">Loading files\u2026 %1$s</string>
    <string name="usb_empty">No files found on this drive.</string>
    <string
        name="usb_error"
    >Could not read files. Try reconnecting the drive.</string>
    <string name="usb_preparing">USB drive detected. Preparing\u2026</string>
    <string name="usb_request_access">Grant access</string>
    <string name="usb_navigate_up">Back</string>
    <string name="usb_root">USB drive</string>
    <string name="actions_toggle">Toggle actions</string>
    <string name="action_new_folder">New folder</string>
    <string name="action_add_file">Add files</string>
    <string name="action_reorder_files">Reorder files</string>
    <string name="action_show_hidden">Show ignored items</string>
    <string name="action_transcode_mp3">Always transcode MP3</string>
    <string name="action_reload_drive">Reload drive</string>
    <string name="dialog_new_folder_title">Create folder</string>
    <string name="dialog_new_folder_name">Folder name</string>
    <string name="dialog_create">Create</string>
    <string name="new_folder_error_blank">Enter a folder name.</string>
    <string
        name="new_folder_error_full"
    >All folder numbers (01\u201399) are in use.</string>
    <string name="new_folder_error_failed">Could not create the folder.</string>
    <string
        name="new_folder_error_not_allowed"
    >Folders can only be created at the drive root.</string>
    <string name="add_file_error_no_folder">Open a folder to add files.</string>
    <string
        name="add_file_error_invalid_name"
    >Files here must be 001\u2013255.mp3.</string>
    <string name="add_file_error_failed">Could not add the file.</string>
    <string name="add_file_success">File added.</string>
    <plurals name="add_files_success">
        <item quantity="one">File added.</item>
        <item quantity="other">%d files added.</item>
    </plurals>
    <string
        name="add_files_partial_success"
    >%1$d of %2$d files added. Some were skipped.</string>
    <string name="add_file_error_invalid_type">Select an audio file.</string>
    <string
        name="add_file_error_conversion_failed"
    >Could not convert this audio file.</string>
    <string name="copy_dialog_title">Copying files</string>
    <string name="copy_progress_initial">Preparing...</string>
    <string
        name="copy_progress_batch_percent"
    >Copying %1$d/%2$d files (%3$d%%)</string>
    <string
        name="copy_progress_batch_percent_eta"
    >Copying %1$d/%2$d files (%3$d%%, %4$s left)</string>
    <string name="copy_progress_detail_file">%1$s</string>
    <string name="copy_progress_detail_rate">%1$s - %2$.1f MB/s</string>
    <string name="transcode_dialog_title">Converting audio</string>
    <string name="transcode_progress_initial">Preparing\u2026</string>
    <string name="transcode_progress_percent">%1$d%%</string>
    <string
        name="transcode_progress_batch_initial"
    >Preparing\u2026 (%1$d/%2$d)</string>
    <string
        name="transcode_progress_batch_percent"
    >Converting %1$d/%2$d files (%3$d%%)</string>
    <string
        name="transcode_progress_batch_percent_eta"
    >Converting %1$d/%2$d files (%3$d%%, %4$s left)</string>
    <string name="add_file_error_full_title">Cannot add files</string>
    <string
        name="add_file_error_full_message"
    >This folder already contains track 255. Remove a track before adding more.</string>
    <string name="reorder_dialog_title">Reorder files</string>
    <string name="reorder_dialog_auto">Auto reorder</string>
    <string name="reorder_dialog_apply">Apply order</string>
    <string name="reorder_no_files">No audio files to reorder here.</string>
    <string
        name="reorder_error_no_folder"
    >Open a folder to reorder files.</string>
    <string
        name="reorder_auto_success"
    >Reordered by track number. Adjust if needed, then apply.</string>
    <string name="reorder_error_failed">Could not reorder files.</string>
    <string name="reorder_success">File order updated.</string>
    <string
        name="reorder_bar_message"
    >Drag handles to reorder. Save to apply.</string>
    <string name="reorder_cancel">Cancel</string>
    <string name="dialog_delete_file_title">Delete file?</string>
    <string name="dialog_delete_folder_title">Delete folder?</string>
    <string
        name="dialog_delete_file_message"
    >Delete \"%1$s\" permanently?</string>
    <string
        name="dialog_delete_folder_message"
    >Delete folder \"%1$s\" and all of its contents?</string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="item_actions_title">Item actions</string>
    <string name="item_actions_delete">Delete</string>
    <string name="item_actions_type_file">File</string>
    <string name="item_actions_type_folder">Folder</string>
    <string name="delete_success">Item deleted.</string>
    <string name="delete_error_failed">Could not delete this item.</string>
    <string
        name="delete_error_reordering"
    >Finish reordering before deleting.</string>
    <string name="delete_unknown_item">this item</string>
    <string name="delete_detail_name">Name: %1$s</string>
    <string name="delete_detail_title">Title: %1$s</string>
    <string name="delete_detail_artist">Artist: %1$s</string>
    <string name="delete_detail_album">Album: %1$s</string>
    <string name="delete_detail_files">Files: %1$d</string>
    <plurals name="folder_track_count">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <string name="folder_empty_label">(empty)</string>
    <string name="item_actions_write_nfc">Write NFC tag</string>
    <string name="nfc_write_title">Write NFC tag</string>
    <string
        name="nfc_mode_audiobook_multiple"
    >Audiobook (multiple files)</string>
    <string name="nfc_write_folder_label">Folder %1$02d</string>
    <string
        name="nfc_write_status_waiting"
    >Hold a writable NFC tag near the phone.</string>
    <string
        name="nfc_write_status_ready"
    >Ready to write to %1$s (%2$s).</string>
    <string name="nfc_write_button">Write NFC Tag</string>
    <string name="nfc_write_button_no_tag">Waiting for NFC tag</string>
    <string name="nfc_write_result_success">Tag written</string>
    <string
        name="nfc_write_result_success_message"
    >The TonUINO data was written to the tag.</string>
    <string name="nfc_write_result_unsupported_title">Unsupported tag</string>
    <string name="nfc_write_result_failure_title">Could not write tag</string>
    <string
        name="nfc_write_result_auth_failure"
    >Authentication failed. Try another tag.</string>
    <string
        name="nfc_write_result_unavailable"
    >Could not reach the tag. Hold it steady and try again.</string>
    <string name="nfc_write_result_unknown_title">Unexpected NFC error</string>
    <string
        name="nfc_write_missing_folder"
    >Could not load this folder to write its tag.</string>
    <string name="nfc_track_list_label">Tracks in this folder</string>
    <string name="nfc_track_list_empty">No tracks found in this folder.</string>
    <string name="nfc_tag_found">NFC tag %1$s detected.</string>
    <string name="nfc_read_tag_failure">Could not read this NFC tag.</string>
    <string name="nfc_tag_technologies">Technologies: %1$s</string>
    <string name="nfc_tag_type">Tag type: %1$s</string>
    <string name="nfca_not_ok">NFC write failed (response: %1$s)</string>
    <string name="identify_unsupported_type">Unsupported NFC tag</string>
    <string name="identify_unknown_type">Unknown</string>
    <string name="button_ok">OK</string>
    <string name="nfc_read_title">NFC tag details</string>
    <string
        name="nfc_read_status_waiting"
    >Hold a TonUINO NFC tag near the phone.</string>
    <string name="nfc_read_status_ready">Ready: %1$s (%2$s).</string>
    <string name="nfc_read_error_generic">Could not read this NFC tag.</string>
    <string
        name="nfc_read_error_unknown_format"
    >Unrecognized TonUINO data on this tag.</string>
    <string
        name="nfc_read_missing_drive"
    >Grant USB drive access to show folder contents.</string>
    <string
        name="nfc_read_missing_folder"
    >Folder %1$02d is not on this drive.</string>
    <string name="nfc_mode_unknown">Unknown mode</string>
    <string name="nfc_mode_audiobook_random">Audiobook (random)</string>
    <string name="nfc_mode_album">Album</string>
    <string name="nfc_mode_party">Party</string>
    <string name="nfc_mode_single">Single track</string>
    <string name="nfc_folder_unknown">Folder unknown</string>

</resources>
