<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tonuinoaudiomanager.MainActivity"
>
    <item
        android:id="@+id/action_show_hidden"
        android:orderInCategory="100"
        android:checkable="true"
        android:title="@string/action_show_hidden"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/action_transcode_mp3"
        android:orderInCategory="105"
        android:checkable="true"
        android:title="@string/action_transcode_mp3"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/action_reload_drive"
        android:orderInCategory="110"
        android:title="@string/action_reload_drive"
        app:showAsAction="never"
    />
</menu>
