<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/app_name"
    />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/usb_waiting"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/requestAccessButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/usb_request_access"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/statusText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/requestAccessButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
    />

    <LinearLayout
        android:id="@+id/navigationContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/loading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigateUpButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usb_navigate_up"
            app:icon="@drawable/ic_arrow_upward_24"
            app:iconPadding="8dp"
            app:iconGravity="textStart"
            app:iconTint="?attr/colorOnSurface"
        />

        <TextView
            android:id="@+id/pathText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/usb_root"
            android:layout_weight="1"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reorderBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/navigationContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    >

        <TextView
            android:id="@+id/reorderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/reorder_bar_message"
            android:textAppearance="?attr/textAppearanceBodyMedium"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end|center_vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reorderCancel"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/reorder_cancel"
            />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reorderAuto"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/reorder_dialog_auto"
            />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reorderApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reorder_dialog_apply"
            />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fileList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="8dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/reorderBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_usb_file"
    />

    <LinearLayout
        android:id="@+id/actionMenuContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    >

        <LinearLayout
            android:id="@+id/actionList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:visibility="gone"
        >

            <LinearLayout
                android:id="@+id/reorderAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
            >

                <TextView
                    android:id="@+id/reorderLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/action_reorder_files"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/reorderFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/action_reorder_files"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/ic_reorder_24"
                />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addFileAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
            >

                <TextView
                    android:id="@+id/addFileLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/action_add_file"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addFileFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/action_add_file"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/ic_add_file_24"
                />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addFolderAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
            >

                <TextView
                    android:id="@+id/addFolderLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/action_new_folder"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addFolderFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/action_new_folder"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/ic_add_folder_24"
                />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mainActionFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/actions_toggle"
            app:srcCompat="@drawable/ic_add_24"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
